add painel de administração
