# app/models/category.rb
@@ -1,4 +1,5 @@
 class Category < ApplicationRecord
+  belongs_to :restaurant, optional: true
   has_many :products, dependent: :restrict_with_error
-  validates :name, presence: true, uniqueness: { case_sensitive: false }, length: { in: 2..80 }
+  validates :name, presence: true, uniqueness: { case_sensitive: false, scope: :restaurant_id }, length: { in: 2..80 }
 end
